# ROS2_offboard_drone_control

./: .gitignore  README.md
drone_control/: CMakeLists.txt  package.xml  setup.py
drone_control/drone_control/: drone_control.py
drone_control/launch/: drone_control.launch.py  offboard_control.launch.py
drone_control/src/: drone_control.cpp  path_planning.cpp
mavsdk_ros2/: package.xml  setup.py
osprey/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
osprey/install/drone_control/share/drone_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
osprey/log/: latest_build
osprey/src/drone_control/: package.xml  setup.py
osprey/src/drone_control/drone_control/: drone_control.py
osprey/src/drone_control/launch/: drone_control.launch.py
osprey/src/drone_control/src/: drone_control.cpp
osprey/src/mavsdk_ros2/: setup.cfg
osprey/src/mavsdk_ros2/launch/: drone_mavsdk.launch.py
osprey/src/mavsdk_ros2/mavsdk_ros2/: drone_data.py
