<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_control</name>
  <version>0.0.1</version>
  <description>Off-board drone control with ROS2 and PX4</description>
  <maintainer email="marthinusnel2023@u.northwestern.edu">Marno Nel</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>
  <depend>Fields2Cover</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>px4_ros_com</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
